# icefall

./: Makefile  docker-compose.yaml
.github/workflows/: train-librispeech.yml
examples/streaming-asr/: README.md  asr_datamodule.py  beam_search.py  code_check.ipynb  decode.py  decode_signle_file.py  decode_stream.py  decoder.py  do_not_use_it_directly.py  encoder_interface.py  export-for-ncnn-zh.py  export-for-ncnn.py  export-onnx-zh.py  export-onnx.py  export.py  jit_pretrained.py  jit_trace_export.py  jit_trace_pretrained.py  joiner.py  model.py  ncnn_custom_layer.py  onnx_check.py  onnx_model_wrapper.py  onnx_pretrained.py  optim.py  params.json  pretrained.py  scaling.py  scaling_converter.py  speech-recognition-from-microphone-with-endpoint-detection.py  streaming-ncnn-decode.py  streaming.sh  streaming_beam_search.py  streaming_decode.py  streaming_speech_to_text.py  test_model.py  train.py  zipformer.py  zipformer_for_ncnn_export_only.py
sherpa/: pyproject.toml
