[tool.poetry]
name = "sherpa"
version = "0.1.0"
description = ""
authors = ["sinhat98 <sinhat897205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "0.2.14"
sherpa-onnx = "1.9.27"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
librosa = "^0.10.2.post1"
sounddevice = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

